--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
     app:startDestination="@id/splashScreenFragment">
-        <fragment
-            android:id="@+id/splashScreenFragment"
-            android:name="com.example.nameslistapp.fragments.SplashScreenFragment"
-            android:label="fragment_splash_screen"
-            tools:layout="@layout/fragment_splash_screen">
-            <action
-                android:id="@+id/action_splashScreenFragment_to_homeFragment"
-                app:destination="@id/homeFragment" />
-        </fragment>
-        <fragment
-            android:id="@+id/homeFragment"
-            android:name="com.example.nameslistapp.fragments.HomeFragment"
-            android:label="fragment_home"
-            tools:layout="@layout/fragment_home" />
-    </navigation>
+    <include app:graph="@navigation/detail_nav"/>
+    <fragment
+        android:id="@+id/splashScreenFragment"
+        android:name="com.example.nameslistapp.fragments.SplashScreenFragment"
+        android:label="fragment_splash_screen"
+        tools:layout="@layout/fragment_splash_screen" >
+        <action
+            android:id="@+id/action_splashScreenFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/splashScreenFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.nameslistapp.fragments.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.example.nameslistapp.fragments.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail" />
+</navigation>
